<resources>
    <string name="app_name">CyberWave</string>
    <string name="email">Email</string>
    <string name="playlist_label">Lo Mejor de %s</string>

    <string name="recuerdame">Recuerdame</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="password">Contraseña</string>
    <string name="register">Registrarse</string>
    <string name="guest_mode">Continuar como Invitado</string>
    <string name="surname">Apellido</string>
    <string name="name">Nombre</string>
    <string name="repeat_password">Repetir Contraseña</string>
    <string name="all_list">Todas las canciones</string>
    <string name="favorites_list">Mis canciones favoritas</string>
    <string name="old_password">Antigua Contraseña</string>
    <string name="repeat_new_password">Repetir Nueva Contraseña</string>
    <string name="new_password">Nueva Contraseña</string>
    <string name="change_password">Restablecer Contraseña</string>
    <string name="delete_account">Eliminar Cuenta</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="label_login_connection">¿Ya tienes cuenta? Inicia Sesión</string>
    <string name="here">Aquí</string>
    <string name="label_connection_register">¿No tienes cuenta? Registrate</string>
    <string name="all_songs">Todas las Canciones</string>
    <string name="my_songs">Mis Favoritas</string>
    <string name="search_by_autor">Buscar por Autor</string>
    <string name="acdc">ACDC</string>
    <string name="post_malone">Post Malone</string>
    <string name="linkin_park">Linkin Park</string>
    <string name="avicii">Avicii</string>
    <string name="_80s">80s</string>
    <string name="rap">Rap</string>
    <string name="rock">Rock</string>
    <string name="house">House</string>

</resources>
