<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/small_logo"
        android:layout_width="135dp"
        android:layout_height="58dp"
        android:layout_marginStart="138dp"
        android:layout_marginEnd="138dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:srcCompat="@drawable/logo_alt" />

    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_width="353dp"
        android:layout_height="80dp"
        android:layout_marginTop="163dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo">

        <TextView
            android:id="@+id/repeat_pass_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textFontWeight="@integer/material_motion_duration_long_2"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/textview_background" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="353dp"
        android:layout_height="80dp"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_name">

        <TextView
            android:id="@+id/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textFontWeight="@integer/material_motion_duration_long_2"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/textview_background"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="353dp"
        android:layout_height="171dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/small_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#D8573061"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/iniciar_sesion"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp">

            <TextView
                android:id="@+id/register_connection_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_connection_register"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/register_connection"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:paddingLeft="5dp"
                android:text="@string/here"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/recuerdame"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="126dp"
        android:layout_height="67dp"

        android:layout_marginTop="24dp"
        android:paddingTop="1dp"
        android:scaleType="centerInside"
        android:scaleX="1.7"
        android:scaleY="1.3"
        app:layout_constraintBottom_toTopOf="@+id/layout_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>
