<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/small_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button">

        <TextView
            android:id="@+id/login_connection_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/label_login_connection"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/login_connection"
            android:layout_width="49dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:paddingLeft="5dp"
            android:text="@string/here"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_email"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginBottom="7dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/layout_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo">

        <TextView
            android:id="@+id/mail_label"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textFontWeight="@integer/material_motion_duration_long_2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_text_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/textview_background"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_surname"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginBottom="7dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/layout_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_name">

        <TextView
            android:id="@+id/surname_label"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/surname"
            android:textColor="#FFFFFF"
            android:textFontWeight="@integer/material_motion_duration_long_2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/surname_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/textview_background"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginBottom="7dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/layout_repeat_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_surname">

        <TextView
            android:id="@+id/pass_label"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textFontWeight="@integer/material_motion_duration_long_2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_text_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/textview_background"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginBottom="7dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/layout_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_email">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/name"
            android:textColor="#FFFFFF"
            android:textFontWeight="@integer/material_motion_duration_long_2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/textview_background"
            android:inputType="text" />

    </LinearLayout>

    <ImageView
        android:id="@+id/small_logo"
        android:layout_width="135dp"
        android:layout_height="58dp"
        android:layout_marginStart="138dp"
        android:layout_marginEnd="138dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:srcCompat="@drawable/logo_alt" />

    <LinearLayout
        android:id="@+id/layout_repeat_password"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_password">

        <TextView
            android:id="@+id/repeat_pass_label"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/repeat_password"
            android:textColor="#FFFFFF"
            android:textFontWeight="@integer/material_motion_duration_long_2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_repeat_register_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/textview_background"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#D8573061"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/register"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_repeat_password" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="126dp"
        android:layout_height="67dp"

        android:layout_marginBottom="24dp"
        android:paddingTop="1dp"
        android:scaleType="centerInside"
        android:scaleX="1.7"
        android:scaleY="1.3"
        app:layout_constraintBottom_toTopOf="@+id/layout_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>
