<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/small_logo"
        android:layout_width="135dp"
        android:layout_height="58dp"
        android:layout_marginStart="138dp"
        android:layout_marginEnd="138dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/logo_alt" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="414dp"
        android:layout_height="165dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:paddingEnd="2dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">

        <ImageButton
            android:id="@+id/menuSpinner"
            android:layout_width="50dp"
            android:layout_height="69dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#009C3333"
            android:paddingEnd="30dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_menu"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="126dp"
            android:layout_height="67dp"

            android:paddingTop="1dp"
            android:scaleType="centerInside"
            android:scaleX="1.7"
            android:scaleY="1.3"
            app:srcCompat="@drawable/main_logo" />

        <ImageButton
            android:id="@+id/configButton"
            android:layout_width="50dp"
            android:layout_height="69dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:paddingStart="30dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_settings" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/small_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <TextView
            android:id="@+id/welcome_label"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/josefin_sans_bold"
            android:textAlignment="center"
            android:textColor="#F3F3F3"
            android:textColorHighlight="#FAFAFA"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/sessionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/deleteAccountButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="80dp"
            android:backgroundTint="#470605"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/delete_account"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetPasswordButton" />

        <Button
            android:id="@+id/sessionButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="#D8573061"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/logout"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/resetPasswordButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/welcome_label" />

        <Button
            android:id="@+id/resetPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#D8573061"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/change_password"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/deleteAccountButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sessionButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
